testsuite/tests/typecheck/should_fail/tcfail173.hs
{-# LANGUAGE Haskell2010 #-}


module ShouldFail where

newtype (f <.> g) a = Compose (f (g a))
