testsuite/tests/typecheck/should_fail/tcfail173.stderr

tcfail173.hs:6:12: error:
    Illegal declaration of a type or class operator ‘<.>’
      Use TypeOperators to declare operators in type and declarations
